--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <p>@Aksharma123</p>
         </div>
         
-        <form action="mail.php" method="POST">
+        <!--<form action="mail.php" method="POST">
             <input type="text" name="name" class="txt-sml" placeholder="Name">
             <input type="text" name="email" class="txt-sml" placeholder="Email">
             <input type="text" name="mobno" class="txt-sml" placeholder="Mobile Number">
@@ -152,7 +152,7 @@
                     Send
                 </button>
             </center>
-        </form>
+        </form>-->
     </div>
     <div class="footer">
         <p>
