--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                             <li><a href="#about">About Me</a></li>
                             <li><a href="#skills">My skills</a></li> 
                             <li><a href="#contact">Contact Me</a></li>
+                            <li><a href="#resume" download="Ashu Sharma Resume">Download Resume</a></li>
                         </ul>
                     </div>
                 </div>
