--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+
+    <link rel="icon" type="images/jpg" href="images/ak.png">
 </head>
 <body>
     <div class = "main">
